Come/Don't Come Bets Implemented
All betting logic is in place

--- a/game.html
+++ b/game.html
@@ -108,7 +108,7 @@
    <div id="gameBoard">
       <div id="passLineVert" onclick="passLineClick()"></div>
       <div id="dontPassBarVert" onclick="dontPassBarClick()"></div>
-            <div id="dontComeBar"></div>
+            <div id="dontComeBar" onclick="dontComeClick()"></div>
                <div class="place" id="placeFour" onclick="placeFourClick()"></div>
                <div class="place" id="placeFive" onclick="placeFiveClick()"></div>
                <div class="place" id="placeSix" onclick="placeSixClick()"></div>
@@ -121,7 +121,7 @@
                <div class="point" id="pointEight"></div>
                <div class="point" id="pointNine"></div>
                <div class="point" id="pointTen"></div>
-         <div id="come"></div>
+         <div id="come" onclick="comeClick()"></div>
          <div id="field" onclick="fieldClick()"></div>
          <div id="dontPassBarHori" onclick="dontPassBarClick()"></div>
          <div id="passLineHori" onclick="passLineClick()"></div>
