modified lobby to pull userID from query string

--- a/game.html
+++ b/game.html
@@ -54,7 +54,7 @@
 
       socket.on('joinFailure', function(data) {
         alert('Table Full - redirecting back to lobby');
-        window.location='http://localhost:3000/lobby';
+        window.location='/lobby?userID='+vars['id'];
       });
 
       //TODO: remove this once roll/simulate are properly implemented
@@ -139,7 +139,7 @@
       });
 
       $('.leaveGame').click(function() {
-        window.location = "http://localhost:3000/lobby";
+        window.location='/lobby?userID='+vars['id'];
       });
 
       $(window).bind('beforeunload', function() {
