--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<meta charset="UTF-8" />
 	<script>
-	window.location = "/lobby";
+   var q = document.URL.split('?')[1];
+	window.location = '/lobby?'+q;
 	</script>
 </head>
 <body>
