modified lobby to pull userID from query string

--- a/game.html
+++ b/game.html
@@ -55,7 +55,7 @@
 
       socket.on('joinFailure', function(data) {
         alert('Table Full - redirecting back to lobby');
-        window.location='http://localhost:3000/lobby';
+        window.location='/lobby?userID='+vars['id'];
       });
 
       //TODO: remove this once roll/simulate are properly implemented
@@ -148,7 +148,7 @@ var letter = player.name.charAt(0).toLocaleLowerCase();
       });
 
       $('.leaveGame').click(function() {
-        window.location = "http://localhost:3000/lobby";
+        window.location='/lobby?userID='+vars['id'];
       });
 
       $(window).bind('beforeunload', function() {
