--- a/lobby.html
+++ b/lobby.html
@@ -31,8 +31,6 @@
     }
 
     $(document).ready(function() {
-      //Roller.init();
-      //Roller.loop();
 
       socket.emit('getTableStatus', {});
 
@@ -45,10 +43,12 @@
         $('.joinTable').removeAttr('disabled');
         console.log(data.tables);
         $.each(data.tables, function(i, table) {
-          $('#t'+i+' .numPlayers').text(table.players.length);
+          $('#t'+i+' .players .player').removeClass('active');
+          $('#t'+i+' .players .player:lt('+table.players.length+')').addClass('active');
           if (table.players.length >= 8) {
-            $('#t'+i+' .numPlayers').text('FULL');
-            $('#t'+i+' .joinTable').attr('disabled', 'disabled');
+            $('#t'+i).addClass('full');
+          } else {
+            $('#t'+i).removeClass('full');
           }
         });
       });
@@ -60,9 +60,22 @@
         });
       });
 
+      $('.table').click(function() {
+        if ( $(this).hasClass('full') ) { return; }
+        if (vars['userID']) {
+          window.location = '/game?t='+ $(this).data('tableNumber')+'&id='+vars['userID'];
+        } else {
+          window.location = '/game?t='+ $(this).data('tableNumber')+'&id='+$('#userId').val();
+        }
+      });
+
       $('.joinTable').click(function() {
-        //window.location = '/game?t='+ $(this).parent().data('tableNumber')+'&id='+$('#userId').val();
-        window.location = '/game?t='+ $(this).parent().data('tableNumber')+'&id='+vars['userID'];
+        //TODO: remove on final release
+        if (vars['userID']) {
+          window.location = '/game?t='+ $(this).parent().data('tableNumber')+'&id='+vars['userID'];
+        } else {
+          window.location = '/game?t='+ $(this).parent().data('tableNumber')+'&id='+$('#userId').val();
+        }
       });
 
       $('.roll').click(function() {
@@ -76,58 +89,126 @@
   </script>
 </head>
 <body>
-  <h1>501 Craps</h1>
-  <div id="viewport" style="display: inline-block; width: 100%; background-color: black"></div>
-  <label>Username</label>
-  <select id="userId"></select>
+  <div style="display: inline-block; width: 35%; vertical-align: top; padding: 2%;">
+    <h1>501 Craps</h1>
+    <img src="/images/dicerollloop.gif" style="width:100%; background: #fff"/>
+    <label>Username</label>
+    <select id="userId" style="display:block;"></select>
+  </div>
   <div id="tableInfo">
     <div id="t0" class="table" data-table-number="0">
-      <h2>Table 0</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table A <span>[full]</span></h2>
+      <div class="tableGraphic">
+        <div class="players">
+          <div class="player"></div>
+          <div class="player"></div>
+          <div class="player"></div>
+          <div class="player"></div>
+          <div class="player"></div>
+          <div class="player"></div>
+          <div class="player"></div>
+          <div class="player"></div>
+        </div>
+        <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      </div>
     </div>
     <div id="t1" class="table" data-table-number="1">
-      <h2>Table 1</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table B <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
     <div id="t2" class="table" data-table-number="2">
-      <h2>Table 2</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table C <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
     <div id="t3" class="table" data-table-number="3">
-      <h2>Table 3</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table D <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
     <div id="t4" class="table" data-table-number="4">
-      <h2>Table 4</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table E <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
     <div id="t5" class="table" data-table-number="5">
-      <h2>Table 5</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table F <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
     <div id="t6" class="table" data-table-number="6">
-      <h2>Table 6</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table G <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
     <div id="t7" class="table" data-table-number="7">
-      <h2>Table 7</h2>
-      <div class="numPlayers"></div>
-      <button class="joinTable">Join</button><button class="roll">Roll</button>
-      <button class="passDice">Pass Dice</button>
+      <h2>Table H <span>[full]</span></h2>
+      <div class="players">
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+        <div class="player"></div>
+      </div>
+      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
     </div>
   </div>
 </body>
