--- a/game.html
+++ b/game.html
@@ -171,7 +171,7 @@ var letter = player.name.charAt(0).toLocaleLowerCase();
 <body>
    <div id="game" style="display: inline-block; float:left; background-color: black; height:400px; width:25%;">
       <h1>Click Roll Below:</h1>
-      <button  id="rollButton"> <img src="/public/images/RollButton.gif" height="100" width="300"/></button><br>
+      <button  id="rollButton"> <img src="/images/RollButton.gif" height="100" width="300"/></button><br>
       <iframe src= "cards.mileshick.kd.io/chat" style="height:50%; width:100%;"></iframe>
       <button class="leaveGame">Leave Game</button>
    </div>
@@ -217,9 +217,23 @@ var letter = player.name.charAt(0).toLocaleLowerCase();
       <div id="anyCraps" onclick="anyCrapsClick()"></div>
       <div id="message"></div>
     </div>
+	<div id="chips">
+		<div class="chip" id="redChip">
+			<img src="/images/red_chip.png" onclick="redChipClick()"/>
+		</div>
+		<div class="chip" id="blueChip" onclick="blueChipClick()">
+			<img src="/images/blue_chip.png"/>
+		</div>
+		<div class="chip" id="greenChip" onclick="greenChipClick()">
+			<img src="/images/green_chip.png"/>
+		</div>
+		<div class="chip" id="blackChip" onclick="blackChipClick()">
+			<img src="/images/black_chip.png"/>
+		</div>
+	</div>
     <div id="players">
       <div class="player" id="player0">
-        <img class="turn" src="/public/images/NewDice.jpg"></img>
+        <img class="turn" src="/images/NewDice.jpg"></img>
         <h2 id="name0">User 0</h2>
         <h3 id="funds0">Fund: 0</h3>
         <img id="picture0" src="http://placehold.it/350x150"></img>
