cleaned up craps table image on lobby page

--- a/lobby.html
+++ b/lobby.html
@@ -109,7 +109,7 @@
           <div class="player"></div>
           <div class="player"></div>
         </div>
-        <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+        <img style="width:100%;" src="/images/craps-table.png" />
       </div>
     </div>
     <div id="t1" class="table" data-table-number="1">
@@ -124,7 +124,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
     <div id="t2" class="table" data-table-number="2">
       <h2>Table C <span>[full]</span></h2>
@@ -138,7 +138,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
     <div id="t3" class="table" data-table-number="3">
       <h2>Table D <span>[full]</span></h2>
@@ -152,7 +152,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
     <div id="t4" class="table" data-table-number="4">
       <h2>Table E <span>[full]</span></h2>
@@ -166,7 +166,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
     <div id="t5" class="table" data-table-number="5">
       <h2>Table F <span>[full]</span></h2>
@@ -180,7 +180,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
     <div id="t6" class="table" data-table-number="6">
       <h2>Table G <span>[full]</span></h2>
@@ -194,7 +194,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
     <div id="t7" class="table" data-table-number="7">
       <h2>Table H <span>[full]</span></h2>
@@ -208,7 +208,7 @@
         <div class="player"></div>
         <div class="player"></div>
       </div>
-      <img style="width:100%;" src="http://www.online-casinos.com/images/craps-table.jpg" />
+      <img style="width:100%;" src="/images/craps-table.png" />
     </div>
   </div>
 </body>
