--- a/game.html
+++ b/game.html
@@ -150,7 +150,7 @@
       });
 
       $(window).bind('beforeunload', function() {
-        $('#gameButtons, #viewport, #players, #gameStats, #gameBoard').hide();
+        $('.leftColumn, .rightColumn').hide();
         $('#gameOver').show();
 
         $.post('http://casino.curtiswendel.me:3000/api/addTransaction?userID='+playerId+'&amount='+funds+'&gameID=5', function( response ) {
@@ -167,60 +167,59 @@
   </script>
 </head>
 <body>
-  <div style="display:inline-block; width:45%;">
-    <div id="viewport" style="height:180px; margin: 0 -10% 20px; vertical-align: top;"></div>
-  <div id="gameBoard">
-    <div id="passLineVert" onclick="passLineClick()"></div>
-    <div id="dontPassBarVert" onclick="dontPassBarClick()"></div>
-      <div id="dontComeBar" onclick="dontComeClick()"></div>
-        <div class="place" id="placeFour" onclick="placeFourClick()"></div>
-        <div class="place" id="placeFive" onclick="placeFiveClick()"></div>
-        <div class="place" id="placeSix" onclick="placeSixClick()"></div>
-        <div class="place" id="placeEight" onclick="placeEightClick()"></div>
-        <div class="place" id="placeNine" onclick="placeNineClick()"></div>
-        <div class="place" id="placeTen" onclick="placeTenClick()"></div>
-        <div class="point" id="pointFour"></div>
-        <div class="point" id="pointFive"></div>
-        <div class="point" id="pointSix"></div>
-        <div class="point" id="pointEight"></div>
-        <div class="point" id="pointNine"></div>
-        <div class="point" id="pointTen"></div>
-    <div id="come" onclick="comeClick()"></div>
-    <div id="field" onclick="fieldClick()"></div>
-    <div id="dontPassBarHori" onclick="dontPassBarClick()"></div>
-    <div id="passLineHori" onclick="passLineClick()"></div>
-    <div id="passOdds" onclick="passOddsClick()"></div>
-    <div id="anySeven" onclick="anySevenClick()"></div>
-    <div id="hardWaySix" onclick="hardWaySixClick()"></div>
-    <div id="hardWayTen" onclick="hardWayTenClick()"></div>
-    <div id="hardWayEight" onclick="hardWayEightClick()"></div>
-    <div id="hardWayFour" onclick="hardWayFourClick()"></div>
-    <div id="dontPassOdds" onclick="dontPassOddsClick()"></div>
-    <div id="aceDeuce" onclick="aceDeuceClick()"></div>
-    <div id="snakeEyes" onclick="snakeEyesClick()"></div>
-    <div id="boxcars" onclick="boxcarsClick()"></div>
-    <div id="yoLeft" onclick="yoLeftClick()"></div>
-    <div id="yoRight" onclick="yoRightClick()"></div>
-    <div id="anyCraps" onclick="anyCrapsClick()"></div>
-    <div id="message"></div>
+  <div class="leftColumn">
+    <div id="viewport" class="diceSimulator"></div>
+    <div id="gameBoard">
+      <div id="passLineVert" onclick="passLineClick()"></div>
+      <div id="dontPassBarVert" onclick="dontPassBarClick()"></div>
+        <div id="dontComeBar" onclick="dontComeClick()"></div>
+          <div class="place" id="placeFour" onclick="placeFourClick()"></div>
+          <div class="place" id="placeFive" onclick="placeFiveClick()"></div>
+          <div class="place" id="placeSix" onclick="placeSixClick()"></div>
+          <div class="place" id="placeEight" onclick="placeEightClick()"></div>
+          <div class="place" id="placeNine" onclick="placeNineClick()"></div>
+          <div class="place" id="placeTen" onclick="placeTenClick()"></div>
+          <div class="point" id="pointFour"></div>
+          <div class="point" id="pointFive"></div>
+          <div class="point" id="pointSix"></div>
+          <div class="point" id="pointEight"></div>
+          <div class="point" id="pointNine"></div>
+          <div class="point" id="pointTen"></div>
+      <div id="come" onclick="comeClick()"></div>
+      <div id="field" onclick="fieldClick()"></div>
+      <div id="dontPassBarHori" onclick="dontPassBarClick()"></div>
+      <div id="passLineHori" onclick="passLineClick()"></div>
+      <div id="passOdds" onclick="passOddsClick()"></div>
+      <div id="anySeven" onclick="anySevenClick()"></div>
+      <div id="hardWaySix" onclick="hardWaySixClick()"></div>
+      <div id="hardWayTen" onclick="hardWayTenClick()"></div>
+      <div id="hardWayEight" onclick="hardWayEightClick()"></div>
+      <div id="hardWayFour" onclick="hardWayFourClick()"></div>
+      <div id="dontPassOdds" onclick="dontPassOddsClick()"></div>
+      <div id="aceDeuce" onclick="aceDeuceClick()"></div>
+      <div id="snakeEyes" onclick="snakeEyesClick()"></div>
+      <div id="boxcars" onclick="boxcarsClick()"></div>
+      <div id="yoLeft" onclick="yoLeftClick()"></div>
+      <div id="yoRight" onclick="yoRightClick()"></div>
+      <div id="anyCraps" onclick="anyCrapsClick()"></div>
+      <div id="message"></div>
+    </div>
+    <div id="chips">
+      <div class="chip" id="redChip" onclick="redChipClick()"></div>
+      <div class="chip" id="blueChip" onclick="blueChipClick()"></div>
+      <div class="chip" id="greenChip" onclick="greenChipClick()"></div>
+      <div class="chip" id="blackChip" onclick="blackChipClick()"></div>
+    </div>
   </div>
-  <div id="chips">
-    <div class="chip" id="redChip" onclick="redChipClick()"></div>
-    <div class="chip" id="blueChip" onclick="blueChipClick()"></div>
-    <div class="chip" id="greenChip" onclick="greenChipClick()"></div>
-    <div class="chip" id="blackChip" onclick="blackChipClick()"></div>
-  </div>
-</div>
-  <div style="display:inline-block; width: 50%; vertical-align: top; padding-left: 3%;">
+  <div class="rightColumn">
     <div id="players"></div>
-    <div id="gameStats" style="display: inline-block; width:50%; vertical-align: top; min-height:250px;">
+    <div id="gameStats">
       <div id="total"></div>
       <div id="rollVal"></div>
       <div id="currGameState"></div>
     </div>
-    <div id="gameButtons" style="display: inline-block; width:25%; vertical-align: top;">
-      <h1>Click Roll Below:</h1>
-      <button  id="rollButton"></button><br>
+    <div id="gameButtons">
+      <button id="rollButton"></button>
     </div>
     <iframe src= "cards.mileshick.kd.io/chat" style="height:50%; width:100%;"></iframe>
     <button class="leaveGame">Leave Game</button>
