Make come bets with chips
also added a little thing that lets the user know what the current point
it

--- a/game.html
+++ b/game.html
@@ -169,6 +169,9 @@
 <body>
   <div class="leftColumn">
     <div id="viewport" class="diceSimulator"></div>
+	<div id="pointChip">
+		<img id="pointChipImg" src="/images/chipoff.png">
+	</div>
     <div id="gameBoard">
       <div id="passLineVert" onclick="passLineClick()"></div>
       <div id="dontPassBarVert" onclick="dontPassBarClick()"></div>
