--- a/lobby.html
+++ b/lobby.html
@@ -8,9 +8,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script type="text/javascript">
-    var socket = io.connect('http://localhost:3000');
-    //var socket = io.connect('http://craps.ngrok.com/');
-    //var socket = io.connect('http://craps501.herokuapp.com/');
+    var socket = io.connect('http://'+window.location.hostname+'/');
   </script>
   <script type="text/javascript" src="/js/external/three.min.r55.js"></script>
   <script type="text/javascript" src="/js/external/stats.js"></script>
