changed text of mobile roll button after click

--- a/phone.html
+++ b/phone.html
@@ -61,7 +61,7 @@
       });
 
       $('button').click(function() {
-         $('button').html('READY');
+         $('button').html('ROLL!');
          $('button').addClass('btn-success');
          $('#rollenable').prop('checked', true);
       })
