added missing leave game button

--- a/game.html
+++ b/game.html
@@ -203,6 +203,7 @@
   <div id="helpWindow">
 	 <div id="closeHelp" onclick="closeHelp()">Close Help Window</div>
 	 <iframe id="helpFrame" src="/helpdocs/typesofbets.html"></iframe>
+  </div>
     <button class="enableMobile">Roll from your phone!</button>
     <button class="leaveGame">Leave Game</button>
   </div>
