fixed userID lobby bug

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8" />
 	<script>
    var q = document.URL.split('?')[1];
-	window.location = '/lobby?'+q;
+	window.location = '/lobby?userID='+q;
 	</script>
 </head>
 <body>
